unpackaged/objects/copado__ExtensionKeyValueSetting__mdt.object
<CustomObject>
	<description>Stores Extension pack specific settings</description>
	<fields>
		<fullName>copado__Extension__c</fullName>
		<label>Extension</label>
		<referenceTo>copado__ExtensionPackageConfiguration__mdt</referenceTo>
		<relationshipLabel>Extension Key Value Settings</relationshipLabel>
		<relationshipName>ExtensionKeyValueSettings</relationshipName>
		<required>true</required>
		<type>MetadataRelationship</type>
	</fields>
	<fields>
		<fullName>copado__Key__c</fullName>
		<label>Key</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Value__c</fullName>
		<label>Value</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<label>Extension Key Value Setting</label>
	<pluralLabel>Extension Key Value Settings</pluralLabel>
</CustomObject>